create port 3001 and root directory of your back-end project

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,13 @@ PGUSER=
 PGPASSWORD=
 PGPORT=
 ENDPOINT_ID=
+
+module.exports = {
+    apps : [{
+        name: 'Rayan_Back',
+        script: 'index.js',
+        env: {
+        NODE_ENV: 'development',
+    }
+}],
+};
